<resources>
    <string name="app_name">Lat1_AKB2_10116073_MuhammadRizqiZeinAzis</string>
    <string name="button">Button</string>
    <string name="mengontrol_hp_anak">Mengontrol HP Anak</string>
    <string name="monitory_membantu_anda">Monitory Membantu Anda</string>
    <string name="mulai">Mulai</string>
    <string name="kode_keluarga">Kode Keluarga</string>
    <string name="ketikkan_kode_keluarga_yang_ayah_bunda_miliki_disini">Ketikkan kode keluarga yang Ayah Bunda miliki disini</string>
    <string name="dengan_menekan_tombol_masuk_anda_menyetujui">Dengan menekan tombol masuk Anda menyetujui</string>
    <string name="ketentuan_pengguna">Ketentuan Pengguna</string>
    <string name="a1b2c3">A1B2C3</string>
    <string name="kami">kami</string>
    <string name="dan">dan</string>
    <string name="kebijakan_data">Kebijakan Data</string>
    <string name="beli_keluarga_disini">Beli Keluarga Disini</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_kode_keluarga">Belum punya kode keluarga?</string>
    <string name="nama_panggilan_kamu">Nama Panggilan Kamu</string>
    <string name="contoh_budi">Contoh : Budi</string>
    <string name="umur_kamu">Umur Kamu</string>
    <string name="contoh_12">Contoh : 12</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="ok">Ok</string>
    <string name="beres_sekarang_kamu">Beres! Sekarang kamu</string>
</resources>
