<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".Verifikasi">

    <Button
        android:id="@+id/button"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/rndbutton"
        android:text="@string/masuk"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Masuk" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/kode_keluarga"
        android:textColor="#202020"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="268dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="80dp"
        android:text="@string/ketikkan_kode_keluarga_yang_ayah_bunda_miliki_disini"
        android:textColor="#202020"
        app:fontFamily="@font/rubik_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="A1B2C3"
        android:inputType="textPersonName"
        android:textColor="#202020"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="201dp"
        android:textColor="#202020"
        android:textSize="10sp"
        app:fontFamily="@font/rubik_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="192dp"
        android:layout_marginTop="412dp"
        android:background="#f8f8f8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rndbutton2"
            android:text="@string/beli_keluarga_disini"
            android:typeface="normal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="510dp"
            tools:text="Beli Keluarga Disini" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="457dp"
        android:text="@string/belum_punya_kode_keluarga"
        app:fontFamily="@font/rubik_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>