<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Biodata">

    <Button
        android:id="@+id/button4"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="476dp"
        android:background="@drawable/rndbutton"
        android:text="@string/selanjutnya"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Selanjutnya" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama_panggilan_kamu"
        android:textColor="#202020"
        android:textSize="24sp"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nama Panggilan Kamu" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="135dp"
        android:text="@string/umur_kamu"
        android:textColor="#202020"
        android:textSize="24sp"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Umur Kamu" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Contoh:Budi"
        android:inputType="textPersonName"
        android:textColor="#202020"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="187dp"
        android:ems="10"
        android:hint="Contoh:12"
        android:inputType="number"
        android:textColor="#202020"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="" />
</android.support.constraint.ConstraintLayout>